# LVGL-Ubuntu

./: .gitignore  .gitmodules  CMakeLists.txt  GUI.cpp  GUI.h  main.cpp
